--- a/fresh/templates/tt_user/login.html
+++ b/fresh/templates/tt_user/login.html
@@ -1,14 +1,101 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>天天生鲜-登录</title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
-<body>
+{% extends "base.html"%}
+{%block script%}
+	<script>
+		$(function () {
+
+//		    var callbacks = $.Callbacks();
+//			callbacks.add(function() {
+//				alert('a');
+//			});
+//			callbacks.add(function() {
+//				alert('b');
+//			});
+//			callbacks.fire();
+//		    $('form').submit(function () {
+//
+//				return false;
+//            });
+			var error_name = false;
+			var error_pwd = false;
+
+			// 帐号移开触发
+			$('.name_input').blur(function () {
+			    if($(this).val().length < 5 || $(this).val().length>20){
+					$('.user_error').html('请输入5-20个字符的用户名').show();
+					error_name = false;
+				}else {
+			        $('.user_error').hide();
+			        error_name = true;
+				}
+
+            });
+			// 密码　移开　触发
+			$('.pass_input').blur(function () {
+			    if($(this).val().length < 8 || $(this).val().length>20){
+					$('.pwd_error').html('密码最少8位，最长20位').show();
+					error_pwd = false;
+				}else{
+			        $('.pwd_error').hide();
+			        error_pwd = true;
+				}
+            });
+//			alert({{name}});
+
+			$('.user_error').html('{{name}}').show();
+			$('.pwd_error').html('{{pwd}}').show();
+			// 表单事件
+			$('form').submit(function () {
+			    $('.name_input').blur();
+			    $('.pass_input').blur();
+			    return error_pwd && error_name;
+            });
+//				var name = 0;
+//				var pwd = 0;
+
+
+//					var aaa = $.get('/user_judge/',{'uname':$('.name_input').val(),'upwd':$('.pass_input').val()}
+//						function(data) {
+//						alert(data.name +'    '+data.pwd);
+//						if(data.name == 1){
+//							name = 1;
+//						}if(data.pwd == 1){
+//							pwd = 1;
+//						}
+//					}
+//					);
+//					console.log(aaa);
+//					console.log(aaa);
+//					if(name == 0){
+//						alert('帐号不存在'+name);
+//						$('.user_error').html('帐号不存在').show();
+//						return false;
+//					}else if(pwd == 0){
+//						alert('密码错误'+pwd);
+//						$('.pwd_error').html('密码错误').show();
+//						return false;
+//					}
+//				});
+//				return false;
+//            });
+
+//			if({{pwd}} == '0'){
+//			    $('.user_error').html('密码错误').show()
+//			}
+//			if({{name}} == '0'){
+//			    $('.more_input').html('帐号不存在').show()
+//			}
+
+
+
+
+        })
+	</script>
+{%endblock script%}
+{%block head%}{%endblock head%}
+{%block shopping%}{%endblock shopping%}
+{%block body%}
 	<div class="login_top clearfix">
-		<a href="index.html" class="login_logo"><img src="images/logo02.png"></a>	
+		<a href="../index.html" class="login_logo"><img src="/static/images/logo02.png"></a>
 	</div>
 
 	<div class="login_form_bg">
@@ -18,16 +105,17 @@
 			<div class="login_form fr">
 				<div class="login_title clearfix">
 					<h1>用户登录</h1>
-					<a href="#">立即注册</a>
+					<a href="/register/">立即注册</a>
 				</div>
 				<div class="form_input">
-					<form>
-						<input type="text" name="username" class="name_input" placeholder="请输入用户名">
+					<form method="post" action="/userok/">
+						{%csrf_token%}
+						<input type="text" name="username" class="name_input" placeholder="请输入用户名" value="{{uname}}">
 						<div class="user_error">输入错误</div>
-						<input type="password" name="pwd" class="pass_input" placeholder="请输入密码">
+						<input type="password" name="pwd" class="pass_input" placeholder="请输入密码" value="{{upwd}}">
 						<div class="pwd_error">输入错误</div>
 						<div class="more_input clearfix">
-							<input type="checkbox" name="">
+							<input type="checkbox" name="checked" checked="checked" value="1">
 							<label>记住用户名</label>
 							<a href="#">忘记密码</a>
 						</div>
@@ -37,20 +125,4 @@
 			</div>
 		</div>
 	</div>
-
-	<div class="footer no-mp">
-		<div class="foot_link">
-			<a href="#">关于我们</a>
-			<span>|</span>
-			<a href="#">联系我们</a>
-			<span>|</span>
-			<a href="#">招聘人才</a>
-			<span>|</span>
-			<a href="#">友情链接</a>		
-		</div>
-		<p>CopyRight © 2016 北京天天生鲜信息技术有限公司 All Rights Reserved</p>
-		<p>电话：010-****888    京ICP备*******8号</p>
-	</div>
-	
-</body>
-</html>
+{%endblock body%}
