--- a/fresh/templates/tt_user/login.html
+++ b/fresh/templates/tt_user/login.html
@@ -95,7 +95,7 @@
 {%block shopping%}{%endblock shopping%}
 {%block body%}
 	<div class="login_top clearfix">
-		<a href="../index.html" class="login_logo"><img src="/static/images/logo02.png"></a>
+		<a href="/" class="login_logo"><img src="/static/images/logo02.png"></a>
 	</div>
 
 	<div class="login_form_bg">
