--- a/fresh/templates/tt_goods/detail.html
+++ b/fresh/templates/tt_goods/detail.html
@@ -16,17 +16,17 @@
 					欢迎您：<em>张 山</em>
 				</div>
 				<div class="login_btn fl">
-					<a href="login.html">登录</a>
+					<a href="../tt_user/login.html">登录</a>
 					<span>|</span>
-					<a href="register.html">注册</a>
+					<a href="../tt_user/register.html">注册</a>
 				</div>
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="info.html">用户中心</a>
+					<a href="../tt_user/info.html">用户中心</a>
 					<span>|</span>
-					<a href="cart.html">我的购物车</a>
+					<a href="../tt_user/cart.html">我的购物车</a>
 					<span>|</span>
-					<a href="order.html">我的订单</a>
+					<a href="../tt_user/order.html">我的订单</a>
 				</div>
 			</div>
 		</div>		
@@ -39,7 +39,7 @@
 			<input type="button" class="input_btn fr" name="" value="搜索">
 		</div>
 		<div class="guest_cart fr">
-			<a href="cart.html" class="cart_name fl">我的购物车</a>
+			<a href="../tt_user/cart.html" class="cart_name fl">我的购物车</a>
 			<div class="goods_count fl" id="show_count">1</div>
 		</div>
 	</div>
