--- a/fresh/templates/tt_user/info.html
+++ b/fresh/templates/tt_user/info.html
@@ -4,18 +4,18 @@
 		<div class="left_menu_con clearfix">
 			<h3>用户中心</h3>
 			<ul>
-				<li><a href="/info/" class="active">· 个人信息</a></li>
-				<li><a href="/order/">· 全部订单</a></li>
-				<li><a href="/site/">· 收货地址</a></li>
+				<li><a href=" /info/" class="active">· 个人信息</a></li>
+				<li><a href=" /order/">· 全部订单</a></li>
+				<li><a href=" /site/">· 收货地址</a></li>
 			</ul>
 		</div>
 		<div class="right_content clearfix">
 				<div class="info_con clearfix">
 				<h3 class="common_title2">基本信息</h3>
 						<ul class="user_info_list">
-							<li><span>用户名：</span>18210569700</li>
-							<li><span>联系方式：</span>18210569700</li>
-							<li><span>联系地址：</span>北京市昌平区</li>			
+							<li><span>用户名：</span></li>
+							<li><span>联系方式：</span></li>
+							<li><span>联系地址：</span></li>
 						</ul>
 				</div>
 				
@@ -23,8 +23,8 @@
 				<div class="has_view_list">
 					<ul class="goods_type_list clearfix">
 				<li>
-					<a href="detail.html"><img src="/static/images/goods/goods003.jpg"></a>
-					<h4><a href="detail.html">大兴大棚草莓</a></h4>
+					<a href="../tt_goods/detail.html"><img src="/static/images/goods/goods003.jpg"></a>
+					<h4><a href="../tt_goods/detail.html">大兴大棚草莓</a></h4>
 					<div class="operate">
 						<span class="prize">￥16.80</span>
 						<span class="unit">16.80/500g</span>
