--- a/fresh/templates/tt_goods/list.html
+++ b/fresh/templates/tt_goods/list.html
@@ -1,48 +1,18 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>天天生鲜-商品列表</title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
-<body>
-	<div class="header_con">
-		<div class="header">
-			<div class="welcome fl">欢迎来到天天生鲜!</div>
-			<div class="fr">
-				<div class="login_info fl">
-					欢迎您：<em>张 山</em>
-				</div>
-				<div class="login_btn fl">
-					<a href="login.html">登录</a>
-					<span>|</span>
-					<a href="register.html">注册</a>
-				</div>
-				<div class="user_link fl">
-					<span>|</span>
-					<a href="info.html">用户中心</a>
-					<span>|</span>
-					<a href="cart.html">我的购物车</a>
-					<span>|</span>
-					<a href="order.html">我的订单</a>
-				</div>
-			</div>
-		</div>		
-	</div>
-
+{% extends "base.html"%}
+{%block shopping%}
 	<div class="search_bar clearfix">
-		<a href="../index.html" class="logo fl"><img src="images/logo.png"></a>
+		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="search_con fl">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
 			<input type="button" class="input_btn fr" name="" value="搜索">
 		</div>
 		<div class="guest_cart fr">
-			<a href="#" class="cart_name fl">我的购物车</a>
+			<a href="/cart/" class="cart_name fl">我的购物车</a>
 			<div class="goods_count fl">1</div>
 		</div>
 	</div>
-
+{%endblock shopping%}
+{%block body%}
 	<div class="navbar_con">
 		<div class="navbar clearfix">
 			<div class="subnav_con fl">
@@ -79,12 +49,12 @@
 				<h3>新品推荐</h3>
 				<ul>
 					<li>
-						<a href="#"><img src="images/goods/goods001.jpg"></a>
+						<a href="#"><img src="/static/images/goods/goods001.jpg"></a>
 						<h4><a href="#">进口柠檬</a></h4>
 						<div class="prize">￥3.90</div>
 					</li>
 					<li>
-						<a href="#"><img src="images/goods/goods002.jpg"></a>
+						<a href="#"><img src="/static/images/goods/goods002.jpg"></a>
 						<h4><a href="#">玫瑰香葡萄</a></h4>
 						<div class="prize">￥16.80</div>
 					</li>
@@ -101,7 +71,7 @@
 
 			<ul class="goods_type_list clearfix">
 				<li>
-					<a href="detail.html"><img src="images/goods/goods003.jpg"></a>
+					<a href="detail.html"><img src="/static/images/goods/goods003.jpg"></a>
 					<h4><a href="detail.html">大兴大棚草莓</a></h4>
 					<div class="operate">
 						<span class="prize">￥16.80</span>
@@ -111,7 +81,7 @@
 				</li>
 
 				<li>
-					<a href="#"><img src="images/goods/goods004.jpg"></a>
+					<a href="#"><img src="/static/images/goods/goods004.jpg"></a>
 					<h4><a href="#">吐鲁番梨光杏</a></h4>
 					<div class="operate">
 						<span class="prize">￥5.50</span>
@@ -121,7 +91,7 @@
 				</li>
 
 				<li>
-					<a href="#"><img src="images/goods/goods005.jpg"></a>
+					<a href="#"><img src="/static/images/goods/goods005.jpg"></a>
 					<h4><a href="#">黄肉桃</a></h4>
 					<div class="operate">
 						<span class="prize">￥10.00</span>
@@ -131,7 +101,7 @@
 				</li>
 
 				<li>
-					<a href="#"><img src="images/goods/goods006.jpg"></a>
+					<a href="#"><img src="/static/images/goods/goods006.jpg"></a>
 					<h4><a href="#">进口西梅</a></h4>
 					<div class="operate">
 						<span class="prize">￥28.80</span>
@@ -248,20 +218,4 @@
 			</div>
 		</div>
 	</div>
-
-	<div class="footer">
-		<div class="foot_link">
-			<a href="#">关于我们</a>
-			<span>|</span>
-			<a href="#">联系我们</a>
-			<span>|</span>
-			<a href="#">招聘人才</a>
-			<span>|</span>
-			<a href="#">友情链接</a>		
-		</div>
-		<p>CopyRight © 2016 北京天天生鲜信息技术有限公司 All Rights Reserved</p>
-		<p>电话：010-****888    京ICP备*******8号</p>
-	</div>
-	
-</body>
-</html>
+{%endblock body%}
