--- a/fresh/templates/tt_goods/place_order.html
+++ b/fresh/templates/tt_goods/place_order.html
@@ -15,17 +15,17 @@
 					欢迎您：<em>张 山</em>
 				</div>
 				<div class="login_btn fl">
-					<a href="login.html">登录</a>
+					<a href="../tt_user/login.html">登录</a>
 					<span>|</span>
-					<a href="register.html">注册</a>
+					<a href="../tt_user/register.html">注册</a>
 				</div>
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="info.html">用户中心</a>
+					<a href="../tt_user/info.html">用户中心</a>
 					<span>|</span>
-					<a href="cart.html">我的购物车</a>
+					<a href="../tt_user/cart.html">我的购物车</a>
 					<span>|</span>
-					<a href="order.html">我的订单</a>
+					<a href="../tt_user/order.html">我的订单</a>
 				</div>
 			</div>
 		</div>		
@@ -47,7 +47,7 @@
 			<dt>寄送到：</dt>
 			<dd><input type="radio" name="" checked="">北京市 海淀区 东北旺西路8号中关村软件园 （李思 收） 182****7528</dd>
 		</dl>
-		<a href="site.html" class="edit_site">编辑收货地址</a>
+		<a href="../tt_user/site.html" class="edit_site">编辑收货地址</a>
 
 	</div>
 	
