--- a/fresh/templates/tt_user/site.html
+++ b/fresh/templates/tt_user/site.html
@@ -1,4 +1,15 @@
 {% extends "base.html"%}
+{%block script%}
+<script>
+	$(function () {
+
+	    $('form').submit(function () {
+
+        })
+
+    })
+</script>
+{%endblock script%}
 {%block body%}
 	<div class="main_con clearfix">
 		<div class="left_menu_con clearfix">
@@ -19,22 +30,23 @@
 				</div>
 				<h3 class="common_title2">编辑地址</h3>
 				<div class="site_con">
-					<form>
+					<form method="post" action="/site_addr/">
+						{%csrf_token%}
 						<div class="form_group">
 							<label>收件人：</label>
-							<input type="text" name="">
+							<input type="text" name="uname">
 						</div>
 						<div class="form_group form_group2">
 							<label>详细地址：</label>
-							<textarea class="site_area"></textarea>
+							<textarea class="site_area" name="uinner"></textarea>
 						</div>
 						<div class="form_group">
 							<label>邮编：</label>
-							<input type="text" name="">
+							<input type="text" name="ucode">
 						</div>
 						<div class="form_group">
 							<label>手机：</label>
-							<input type="text" name="">
+							<input type="text" name="utel">
 						</div>
 
 						<input type="submit" name="" value="提交" class="info_submit">
