--- a/fresh/templates/index.html
+++ b/fresh/templates/index.html
@@ -66,7 +66,7 @@
 				<a href="/{{c.id}}/">{{c.gtitle|truncatechars:15}}</a>
 				{%endfor%}
 			</div>
-			<a href="/list/" class="goods_more fr" id="fruit_more">查看更多 ></a>
+			<a href="/list{{d.t.id}}_1_1/" class="goods_more fr" id="fruit_more">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -75,7 +75,7 @@
 				{%for g in d.new%}
 				<li>
 					<h4><a href="#">{{g.gtitle}}</a></h4>
-					<a href="#"><img src="/static/{{g.gpic}}"></a>
+					<a href="/{{g.id}}/"><img src="/static/{{g.gpic}}"></a>
 					<div class="prize">¥ 30.00</div>
 				</li>
 				{%endfor%}
@@ -104,5 +104,3 @@
 		}
 	</script>
 {%endblock script_bottom%}
-</body>
-</html>
