--- a/fresh/templates/tt_user/cart.html
+++ b/fresh/templates/tt_user/cart.html
@@ -48,6 +48,6 @@
 		<li class="col01"><input type="checkbox" name="" checked=""></li>
 		<li class="col02">全选</li>
 		<li class="col03">合计(不含运费)：<span>¥</span><em>42.60</em><br>共计<b>2</b>件商品</li>
-		<li class="col04"><a href="../tt_goods/place_order.html">去结算</a></li>
+		<li class="col04"><a href="/place/">去结算</a></li>
 	</ul>
 {%endblock body%}
