历史记录ajax做的，太麻烦，不灵活

--- a/fresh/templates/tt_goods/detail.html
+++ b/fresh/templates/tt_goods/detail.html
@@ -1,4 +1,12 @@
 {% extends "base.html"%}
+{%block script%}
+<script>
+	$(function () {
+	    var sid = {{goods.id}}
+		$.get('/record/', {'sid':sid});
+    });
+</script>
+{%endblock script%}
 {%block shopping%}
 	<div class="search_bar clearfix">
 		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
