我的购物车雏形

--- a/fresh/templates/tt_goods/detail.html
+++ b/fresh/templates/tt_goods/detail.html
@@ -1,4 +1,18 @@
 {% extends "base.html"%}
+{%block script%}
+	<script>
+		$(function () {
+		    $('#show_count').text('12');
+		    $('#age').hide();
+			$('#add_cart').click(function () {
+			    var count = $('.num_show').val();
+				$.get('/add_cart/',{'goods':'{{goods.id}}', 'goods_count':count}, function (data) {
+					$('#age').text(data.goods_num)
+                });
+            });
+        })
+	</script>
+{%endblock script%}
 {%block shopping%}
 	<div class="search_bar clearfix">
 		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
@@ -8,7 +22,7 @@
 		</div>
 		<div class="guest_cart fr">
 			<a href="/cart/" class="cart_name fl">我的购物车</a>
-			<div class="goods_count fl" id="show_count">1</div>
+			<div class="goods_count fl" id="show_count">0</div>
 		</div>
 	</div>
 {%endblock shopping%}
@@ -107,29 +121,34 @@
 
 		</div>
 	</div>
+	<div id="age"></div>
 {%endblock body%}
 {%block script_bottom%}
 	<div class="add_jump"></div>
 
 	<script type="text/javascript" src="/static/js/jquery-1.12.2.js"></script>
 	<script type="text/javascript">
-		var $add_x = $('#add_cart').offset().top;
-		var $add_y = $('#add_cart').offset().left;
 
-		var $to_x = $('#show_count').offset().top;
-		var $to_y = $('#show_count').offset().left;
+		$(function () {
 
-		$(".add_jump").css({'left':$add_y+80,'top':$add_x+10,'display':'block'})
-		$('#add_cart').click(function(){
-			$(".add_jump").stop().animate({
-				'left': $to_y+7,
-				'top': $to_x+7},
-				"fast", function() {
-					$(".add_jump").fadeOut('fast',function(){
-						$('#show_count').html(2);
-					});
 
-			});
-		})
+			$('#add_cart').click(function(){
+				var $add_x = $('#add_cart').offset().top;
+				var $add_y = $('#add_cart').offset().left;
+
+				var $to_x = $('#show_count').offset().top;
+				var $to_y = $('#show_count').offset().left;
+				$(".add_jump").css({'left':$add_y+80,'top':$add_x+10,'display':'block'});
+				$(".add_jump").stop().animate({
+					'left': $to_y+7,
+					'top': $to_x+7},
+					"fast", function() {
+						$(".add_jump").fadeOut('fast',function(){
+							$('#show_count').html($('#age').text());
+						});
+
+				});
+			})
+        })
 	</script>
 {%endblock script_bottom%}
