--- a/fresh/templates/tt_user/info.html
+++ b/fresh/templates/tt_user/info.html
@@ -22,7 +22,7 @@
 				<h3 class="common_title2">最近浏览</h3>
 				<div class="has_view_list">
 					<ul class="goods_type_list clearfix">
-						{%for i in '12312'%}
+						{%for goods in goods%}
 				<li>
 					<a href="../tt_goods/detail.html"><img src="/static/{{goods.gpic}}"></a>
 					<h4><a href="../tt_goods/detail.html">{{goods.gtitle}}</a></h4>
