--- a/fresh/templates/tt_goods/place.html
+++ b/fresh/templates/tt_goods/place.html
@@ -1,11 +1,27 @@
 {% extends "base.html"%}
+{%block script%}
+<script>
+	$(function () {
+//	    总价　计算函数
+		var cart_num = 0;
+		$('.col07').each(function () {
+			cart_num += parseFloat($(this).text())*100;
+        });
+//		更新总价等值
+		$('.total_goods_count em').text($('.goods_list_td').length).next().text(cart_num/100 + '元');
+		$('.total_pay b').text(cart_num/100 + 10 +'元');
+    });
+</script>
+{%endblock script%}
 {%block body%}
 	<h3 class="common_title">确认收货地址</h3>
 
 	<div class="common_list_con clearfix">
 		<dl>
 			<dt>寄送到：</dt>
-			<dd><input type="radio" name="" checked="">北京市 海淀区 东北旺西路8号中关村软件园 （李思 收） 182****7528</dd>
+			<dd><input type="radio" name="" checked="">{{cart_list.0.user.address_set.all.0.aaddr}}
+				&nbsp;&nbsp;&nbsp;({{cart_list.0.user.address_set.all.0.aname}}&nbsp;收)&nbsp;&nbsp;&nbsp;&nbsp;
+				{{cart_list.0.user.address_set.all.0.atel}}</dd>
 		</dl>
 		<a href="/site/" class="edit_site">编辑收货地址</a>
 
@@ -35,24 +51,17 @@
 			<li class="col04">数量</li>
 			<li class="col05">小计</li>		
 		</ul>
+		{%for cart in cart_list%}
 		<ul class="goods_list_td clearfix">
-			<li class="col01">1</li>			
-			<li class="col02"><img src="/static/images/goods/goods012.jpg"></li>
-			<li class="col03">奇异果</li>
-			<li class="col04">500g</li>
-			<li class="col05">25.80元</li>
-			<li class="col06">1</li>
-			<li class="col07">25.80元</li>	
+			<li class="col01">{{forloop.counter}}</li>
+			<li class="col02"><img src="/static/{{cart.goods.gpic}}"></li>
+			<li class="col03">{{cart.goods.gtitle|truncatechars:15}}</li>
+			<li class="col04">{{cart.goods.gunit}}</li>
+			<li class="col05">{{cart.goods.gprice}}元</li>
+			<li class="col06">{{cart.num}}</li>
+			<li class="col07">{{cart.goods.gprice}}元</li>
 		</ul>
-		<ul class="goods_list_td clearfix">
-			<li class="col01">2</li>			
-			<li class="col02"><img src="/static/images/goods/goods003.jpg"></li>
-			<li class="col03">大兴大棚草莓</li>
-			<li class="col04">500g</li>
-			<li class="col05">16.80元</li>
-			<li class="col06">1</li>
-			<li class="col07">16.80元</li>	
-		</ul>
+		{%endfor%}
 	</div>
 
 	<h3 class="common_title">总金额结算</h3>
