--- a/fresh/templates/tt_cart/cart.html
+++ b/fresh/templates/tt_cart/cart.html
@@ -7,7 +7,10 @@
 //		<input type="text" class="num_show fl" value="{{goods.num}}">
 //		<a href="javascript:;" class="minus fl">-</a>
 //	</div>
+	var cart_id = [];
 	$(function () {
+	    var goods_count = 0;
+
 		$('.cart_list_td').delegate('a', 'click', function () {
 		    var revise = 0;
 		    var goods_id = $(this).nextAll().eq(-1).val();
@@ -23,15 +26,68 @@
             $.get('/revise_cart/', {'revise':revise, 'goods_id':goods_id},function (data) {
                 var a = $('#'+goods_id).val(data.goods_num);
                 if(data.goods_num == 0){
-                    $('#'+goods_id).parent().parent().parent().hide();
+                    $('#'+goods_id).parent().parent().parent().html('');
+                    $('.total_count em').text(goods_count - 1);
 				}
-            })
-        })
-    })
+				$('.cart_list_td').each(show);
+                price_num();
+
+            });
+//            var count = $(this).find('.num_show').val();
+//			var price = parseFloat($(this).find('.col05').text());
+//			$(this).find('.col07').text(count*price + '元');
+
+        });
+//		价格函数
+		function show() {
+			$(this).find('.col07').text(parseFloat($(this).find('.col05').text())*100*$(this).find('.num_show').val()/100 + '元');
+        }
+//        价格
+		$('.cart_list_td').each(show);
+		$('.cart_list_td').each(function () {
+		    goods_count += 1;
+			$('.total_count em').text(goods_count);
+        });
+
+//		总个数
+		function price_num() {
+			var pnum = 0;
+			var count = 0;
+			cart_id = [];
+			$(':checked:not(#all)').each(function () {
+				pnum += parseFloat($(this).parent().nextAll('.col07').text())*100;
+				count += 1;
+				cart_id.push($(this).next().val());
+        	});
+			$('.col03 b').text(count);
+			$('.settlements em').text(pnum/100);
+        }
+        price_num();
+//		选框，总价格，总数量
+		$('input').click(function () {
+			price_num();
+        });
+//		全选框
+		console.log($('input[type=checked]'));
+		$('#all').click(function () {
+			if($(this).prop('checked')){  // 全选
+			    $('.checkbox').prop({checked:'checked'})
+			}else {
+			    $('.checkbox').prop({checked:''})
+			}
+			price_num();
+        });
+//		提交
+
+
+    });
+		function jump() {
+			location.href = '/place/?id=' + cart_id;
+        }
 </script>
 {%endblock script%}
 {%block body%}
-	<div class="total_count">全部商品<em>2</em>件</div>	
+	<div class="total_count">全部商品<em></em>件</div>
 	<ul class="cart_list_th clearfix">
 		<li class="col01">商品名称</li>
 		<li class="col02">商品单位</li>
@@ -42,11 +98,11 @@
 	</ul>
 	{%for goods in goods_list%}
 	<ul class="cart_list_td clearfix">
-		<li class="col01"><input type="checkbox" name="" checked></li>
+		<li class="col01"><input type="checkbox" name=""  class="checkbox"><input type="hidden" value="{{goods.id}}"></li>
 		<li class="col02"><img src="/static/{{goods.goods.gpic}}"></li>
 		<li class="col03">{{goods.goods.gtitle}}<br><em>{{goods.goods.gprice}}元/{{goods.goods.gunit}}</em></li>
-		<li class="col04">{{goods.goods.gprice}}</li>
-		<li class="col05">{{goods.goods.gunit}}元</li>
+		<li class="col04">{{goods.goods.gunit}}</li>
+		<li class="col05">{{goods.goods.gprice}}元</li>
 		<li class="col06">
 			<div class="num_add">
 				<a href="javascript:;" class="add fl">+</a>
@@ -56,16 +112,16 @@
 			</div>
 
 		</li>
-		<li class="col07">16.80元</li>
+		<li class="col07">0元</li>
 		<li class="col08"><a href="javascript:;">删除</a><input type="hidden" value="{{goods.id}}"></li>
 	</ul>
 	{%endfor%}
 	
 
 	<ul class="settlements">
-		<li class="col01"><input type="checkbox" name="" checked=""></li>
+		<li class="col01"><input type="checkbox" id="all"></li>
 		<li class="col02">全选</li>
 		<li class="col03">合计(不含运费)：<span>¥</span><em>42.60</em><br>共计<b>2</b>件商品</li>
-		<li class="col04"><a href="/place/">去结算</a></li>
+		<li class="col04"><a href="javascript:jump();">去结算</a></li>
 	</ul>
 {%endblock body%}
