--- a/fresh/templates/tt_user/order.html
+++ b/fresh/templates/tt_user/order.html
@@ -1,4 +1,84 @@
 {% extends "base.html"%}
+{%block script%}
+<script>
+	$.get('/order_list/', function (data) {
+		var order_id_list = eval('(' + data.order_id_list + ')');
+//		for(var j = 0; j < order_id_list.length; j++) {}
+//  			alert(order_id_list[j]);   // 遍历数组
+//			alert(order_id_list[1]);
+//			[12,32,32,34,232]   总　５个　　分两个
+//			５／２　＝　２
+//			２－１　　２＊２－１　　＜５
+//			１　　３　　　４
+//			１．计算出有几页
+			p1 = 1;   // 第几页
+
+			d = 2;   // 一页几条数据
+			p = Math.ceil(order_id_list.length/d);   // 总页数
+
+			var a;
+			if(p1 < p){
+//			    0,1   2,3   4
+			    a = order_id_list.slice(p1*d-d,p1*d);  // 　下标
+			}else if(p1 = p){
+			    a = order_id_list.slice(p1*d-d,order_id_list.length);
+			}
+			var item = 2;
+			var as = 'abadsa'+item + 'assdf	13123';
+//			alert(as);
+//
+//			console.log(html);
+
+//			构造　html
+//			var html =
+//				'{%for order in order_list%}'+
+//				'<ul class="order_list_th w978 clearfix">'+
+//					'<li class="col01">{{order.data}}</li>'+
+//					'<li class="col02">订单号：{{order.id}}</li>'+
+//					'<li class="col02 stress">{{order.status}}</li>'+
+//				'</ul>'+
+//
+//				'<table class="order_list_table w980">'+
+//					'<tbody>'+
+//						'<tr>'+
+//							'<td width="55%">'+
+//								'{%for order_goods in order.ordergoods_set.all%}'+
+//								'<ul class="order_goods_list clearfix">'	+
+//									'<li class="col01"><img src="/static/{{order_goods.goods_img}}"></li>'+
+//									'<li class="col02">{{order_goods.goods_title|truncatechars:15}}<em>{{order_goods.goods_price}}元/{{order_goods.goods_unit}}</em></li>'+
+//									'<li class="col03">{{order_goods.goods_count}}</li>'+
+//									'<li class="col04">{{order_goods.goods_price}}元</li>'+
+//								'</ul>'+
+//								'{%endfor%}'+
+//							'</td>'+
+//
+//							'<td width="15%">{{order.num_price}}元</td>'+
+//							'{%if order.status == "未支付"%}'+
+//							'<td width="15%">待付款</td>'+
+//							'{%else%}'+
+//							'<td width="15%">已付款</td>'+
+//							'{%endif%}'+
+//
+//							'{%if order.status == "未支付"%}'+
+//							'<td width="15%"><a href="#" class="oper_btn">去付款</a></td>'+
+//							'{%else%}'+
+//							'<td width="15%">' +
+//							'<a href="#" class="oper_btn">查看物流</a>' +
+//							'</td>'+
+//							'{%endif%}'+
+//						'</tr>'+
+//					'</tbody>'+
+//				'</table>'+
+//			'{%endfor%}';
+//			end html
+
+//				alert(html);
+//			$('#order').html(html)
+
+
+    })
+</script>
+{%endblock script%}
 {%block body%}
 	<div class="main_con clearfix">
 		<div class="left_menu_con clearfix">
@@ -11,64 +91,47 @@
 		</div>
 		<div class="right_content clearfix">
 				<h3 class="common_title2">全部订单</h3>
+				<div id="order">
+				{%for order in order_list%}
 				<ul class="order_list_th w978 clearfix">
-					<li class="col01">2016-8-21 17:36:24</li>
-					<li class="col02">订单号：56872934</li>
-					<li class="col02 stress">未支付</li>		
+					<li class="col01">{{order.data}}</li>
+					<li class="col02">订单号：{{order.id}}</li>
+					<li class="col02 stress">{{order.status}}</li>
 				</ul>
 
 				<table class="order_list_table w980">
 					<tbody>
 						<tr>
 							<td width="55%">
+								{%for order_goods in order.ordergoods_set.all%}
 								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="/static/images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
+									<li class="col01"><img src="/static/{{order_goods.goods_img}}"></li>
+									<li class="col02">{{order_goods.goods_title|truncatechars:15}}<em>{{order_goods.goods_price}}元/{{order_goods.goods_unit}}</em></li>
+									<li class="col03">{{order_goods.goods_count}}</li>
+									<li class="col04">{{order_goods.goods_price}}元</li>
 								</ul>
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="/static/images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
+								{%endfor%}
 							</td>
-							<td width="15%">33.60元</td>
+
+							<td width="15%">{{order.num_price}}元</td>
+							{%if order.status == '未支付'%}
 							<td width="15%">待付款</td>
-							<td width="15%"><a href="#" class="oper_btn">去付款</a></td>
-						</tr>
-					</tbody>
-				</table>
-				
-				<ul class="order_list_th w978 clearfix">
-					<li class="col01">2016-8-21 17:36:24</li>
-					<li class="col02">订单号：56872934</li>
-					<li class="col02 stress">已支付</li>			
-				</ul>
-				<table class="order_list_table w980">
-					<tbody>
-						<tr>
-							<td width="55%">
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="/static/images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="/static/images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-							</td>
-							<td width="15%">33.60元</td>
+							{%else%}
 							<td width="15%">已付款</td>
+							{%endif%}
+
+							{%if order.status == '未支付'%}
+							<td width="15%"><a href="#" class="oper_btn">去付款</a></td>
+							{%else%}
 							<td width="15%"><a href="#" class="oper_btn">查看物流</a></td>
+							{%endif%}
 						</tr>
 					</tbody>
 				</table>
+			{%endfor%}
+					</div>
+				
+
 
 				<div class="pagenation">
 					<a href="#"><上一页</a>
