--- a/fresh/templates/tt_user/order.html
+++ b/fresh/templates/tt_user/order.html
@@ -1,21 +1,159 @@
 {% extends "base.html"%}
 {%block script%}
 <script>
+	$(function () {
+
+			var order_count = '{{order_count}}';    //  多少条数据
+			var item = 1;	// 一页两条
+			var page = parseInt(Math.ceil(order_count/item));  // 总页数
+			var page_html = '';　　　　// 页码
+			var current_page = 1;
+
+			// 第一次显示　调用
+			$('.show_hide').hide();
+			page_show(1,$('.active'));
+
+			// 页码　输入 显示数据　函数
+			function page_show(p) {
+				current_page = parseInt(p);
+				p2 = p * item;    		// 1 * 2 = 2		// 2 * 2 = 4
+				p1 = p2-item+1; 	// 2 - 2 + 1=1		// 4-2+1 = 3
+				$('.show_hide').hide();
+//				$a.addClass('active').siblings().removeClass('active');
+				for(var i=p1; i<=p2; i++){
+						$('#'+i).show();
+					}
+				}
+
+
+
+			// 页码　构造　thml
+			function create_html() {
+			    page_html = '';
+			    page_html += '<a href="#"><上一页</a>';
+//			    page_html += '<a href="#" class="active">1</a>';
+				// 首页，　１　　　　　　　２　３　
+				// 末页，
+				// 前面，
+				// 后面，
+				// 中间
+				var p1 = 1;
+				var p2 = page;
+				var left = false;
+				var right = false;
+
+				if(current_page<4 && current_page+2<page){
+				    p2 = 5;
+				    right = true;
+				} else if(current_page < page-2){
+				    p2 = 2 +current_page;
+				    right = true;
+				}
+
+				if(current_page<=3 && current_page<page){
+				    p1 = 1;
+				}else if(current_page+2>=page && current_page-2>=1){
+				    p1 = page-4;
+				    left = true;
+				}else if(current_page-2>1){
+				    p1 = current_page-2;
+				    left = true;
+				}
+				if(left){
+				    page_html += '<a href="#">1</a>';
+				    if(current_page!=4) {
+                        page_html += '<a href="#" id="left5">...</a>';
+                    }
+
+				}
+
+				for_p();
+
+				if(right){
+					if(current_page == page-3){
+						page_html += '<a href="#">'+page+'</a>';
+					}else {
+					    page_html += '<a href="#" id="rigth5">...</a>';
+					    page_html += '<a href="#">'+page+'</a>';
+					}
+
+				}
+
+
+
+				function for_p() {
+					for(var i=p1;i<=p2;i++){
+							if(current_page==i){
+								page_html += '<a href="#" class="active">'+i+'</a>';
+							}else {
+								page_html += '<a href="#">'+i+'</a>';
+							}
+
+						}
+                }
+				page_html += '<a href="#">下一页></a>';
+            }
+            create_html();
+			$('.pagenation').html(page_html);
+//            --------------------------
+
+
+
+            // 点击显示
+			$('.pagenation').delegate('a','click',function () {
+
+			    p = $(this).text();
+			    if(p>=1 && p<=page){
+			        current_page = parseInt(p);
+					page_show($(this).text())
+				}
+				else if(p=='<上一页' && current_page>1) {
+					current_page--;
+					page_show(current_page)
+				}
+				else if(p == '下一页>' && current_page<page){
+			        current_page++;
+					page_show(current_page)
+				}else if(p == '...'){
+				    if($(this).prop('id')=='left5'){
+				        current_page -= 5;
+				        if(current_page <1){
+				            current_page = 1;
+						}
+					}else {
+				        current_page += 5;
+				        if(current_page > page){
+				            current_page = page
+						}
+					}
+					page_show(current_page)
+				}
+				else {
+				    return false
+				}
+				create_html();
+            	$('.pagenation').html(page_html);
+            });
+
+
+
+    });
+
+
+
 	$.get('/order_list/', function (data) {
 		var order_id_list = eval('(' + data.order_id_list + ')');
 //		for(var j = 0; j < order_id_list.length; j++) {}
 //  			alert(order_id_list[j]);   // 遍历数组
-//			alert(order_id_list[1]);
+//			alerder_id_list[1]);
 //			[12,32,32,34,232]   总　５个　　分两个
 //			５／２　＝　２
 //			２－１　　２＊２－１　　＜５
 //			１　　３　　　４
 //			１．计算出有几页
 			p1 = 1;   // 第几页
-
 			d = 2;   // 一页几条数据
 			p = Math.ceil(order_id_list.length/d);   // 总页数
-
 			var a;
 			if(p1 < p){
 //			    0,1   2,3   4
@@ -23,8 +161,8 @@
 			}else if(p1 = p){
 			    a = order_id_list.slice(p1*d-d,order_id_list.length);
 			}
-			var item = 2;
-			var as = 'abadsa'+item + 'assdf	13123';
+//			var item = 2;
+//			var as = 'abadsa'+item + 'assdf	13123';
 //			alert(as);
 //
 //			console.log(html);
@@ -91,8 +229,8 @@
 		</div>
 		<div class="right_content clearfix">
 				<h3 class="common_title2">全部订单</h3>
-				<div id="order">
 				{%for order in order_list%}
+				<div id="{{forloop.counter}}" class="show_hide">
 				<ul class="order_list_th w978 clearfix">
 					<li class="col01">{{order.data}}</li>
 					<li class="col02">订单号：{{order.id}}</li>
@@ -104,7 +242,7 @@
 						<tr>
 							<td width="55%">
 								{%for order_goods in order.ordergoods_set.all%}
-								<ul class="order_goods_list clearfix">					
+								<ul class="order_goods_list clearfix">
 									<li class="col01"><img src="/static/{{order_goods.goods_img}}"></li>
 									<li class="col02">{{order_goods.goods_title|truncatechars:15}}<em>{{order_goods.goods_price}}元/{{order_goods.goods_unit}}</em></li>
 									<li class="col03">{{order_goods.goods_count}}</li>
@@ -128,9 +266,9 @@
 						</tr>
 					</tbody>
 				</table>
-			{%endfor%}
 					</div>
-				
+			{%endfor%}
+
 
 
 				<div class="pagenation">
